@@ -1,2 +1,3 @@
-Time scale of t is 1ms / 1us
+t: Time scale of t is 1ms / 1us
+sub: Time scale of sub is 1s / 1us
 *-* All Finished *-*
